RESOLVED FIXED227724
_WKWebAuthenticationPanel escapes slashes in origin
https://bugs.webkit.org/show_bug.cgi?id=227724
Summary _WKWebAuthenticationPanel escapes slashes in origin
Garrett Davidson
Reported 2021-07-06 15:04:23 PDT
_WKWebAuthenticationPanel escapes slashes in origin
Attachments
Patch (1.76 KB, patch)
2021-07-06 15:06 PDT, Garrett Davidson
no flags
Patch (8.45 KB, patch)
2021-07-08 11:07 PDT, Garrett Davidson
no flags
Garrett Davidson
Comment 1 2021-07-06 15:06:13 PDT
Garrett Davidson
Comment 2 2021-07-06 15:06:17 PDT
Brent Fulgham
Comment 3 2021-07-06 15:35:11 PDT
Comment on attachment 432979 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=432979&action=review > Source/WebKit/UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm:76 > + return [NSJSONSerialization dataWithJSONObject:dictionary.get() options:(NSJSONWritingSortedKeys | NSJSONWritingWithoutEscapingSlashes) error:nil]; Seems like we should add a test of some kind to make sure we don't break this. Could you add a TestWebKitAPI test to OpenSource/Tools/TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm that confirms that the JSON blob is right?
Garrett Davidson
Comment 4 2021-07-08 11:07:30 PDT
Kate Cheney
Comment 5 2021-07-12 16:08:27 PDT
Comment on attachment 433143 [details] Patch r=me
EWS
Comment 6 2021-07-12 16:43:23 PDT
Committed r279856 (239610@main): <https://commits.webkit.org/239610@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433143 [details].
Note You need to log in before you can comment on or make changes to this bug.